# src/lib/purchase/all/$api.ts
@@ -1,0 +1,25 @@
+import type { AspidaClient, BasicHeaders } from 'aspida'
+import type { Methods as Methods0 } from '.'
+
+const api = <T>({ baseURL, fetch }: AspidaClient<T>) => {
+  const prefix = (baseURL === undefined ? '' : baseURL).replace(/\/$/, '')
+  const PATH0 = '/purchase/all'
+  const GET = 'GET'
+
+  return {
+    /**
+     * @returns successful
+     */
+    get: (option?: { config?: T | undefined } | undefined) =>
+      fetch<Methods0['get']['resBody'], BasicHeaders, Methods0['get']['status']>(prefix, PATH0, GET, option).json(),
+    /**
+     * @returns successful
+     */
+    $get: (option?: { config?: T | undefined } | undefined) =>
+      fetch<Methods0['get']['resBody'], BasicHeaders, Methods0['get']['status']>(prefix, PATH0, GET, option).json().then(r => r.body),
+    $path: () => `${prefix}${PATH0}`
+  }
+}
+
+export type ApiInstance = ReturnType<typeof api>
+export default api
